# protorecord

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  python_env.sh.in
cmake/macros/: ProtobufMacros.cmake
demo/: CMakeLists.txt  ReaderDemo.cpp  WriterDemo.cpp  WriterPerf.cpp
demo/proto/: BasicMessage.proto  CMakeLists.txt  DemoMessages.proto
include/: CMakeLists.txt  protorecord.h
include/protorecord/: CMakeLists.txt  Constants.h  Reader.h  Sizes.h  Utils.h  Writer.h  version.h.in
src/: CMakeLists.txt  Reader.cpp  Writer.cpp
src/cpp/: CMakeLists.txt  Reader.cpp  Writer.cpp
src/java/protorecord/: pom.xml
src/java/protorecord/src/main/java/com/hankedan/protorecord/: Reader.java
src/java/protorecord/src/main/java/demos/: ReaderDemo.java
src/java/protorecord/src/main/java/protorecord/: Constants.java  Reader.java
src/java/protorecord/src/test/java/demos/: ReaderDemo.java
src/java/protorecord/src/test/java/protorecord/: ReaderTest.java  TestRecordings.java
src/proto/: CMakeLists.txt  DemoMessages.proto  Protorecord.proto  ProtorecordIndex.proto  ProtorecordTypes.proto
src/py/: CMakeLists.txt  ProtorecordTest.py
src/py/protorecord/: Reader.py
test/: CMakeLists.txt  ProtorecordTest.cpp  ProtorecordTest.h  ProtorecordTest.py
test/records/basic_helloworld/: README.md  data  index
